# mysticai-easyocr

./: .env.example  .gitignore  README.md  pyproject.toml
src/: easyocr-upload.py  easyocr.py  test.py
src/v2/: Dockerfile  ocr_v2.py  pipeline.dockerfile  pipeline.yaml
tests/: pipeline.py  ppln.py  test.py
